# schul-analysis

./: .coverage  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONZEPT.md  DESIGN_ENTSCHEIDUNGEN.md  GEMINI_CODE_REVIEW.md  GEMINI_REVIEW_MATERIAL.md  GEMINI_REVIEW_PROMPT.md  KEY_CODE_EXAMPLES.md  README.md  SCHMIEGKURVEN_INTEGRATION_ABSCHLUSS.md  Statistik_mit_Sympy.md  TAYLOR_IMPLEMENTATION_SUMMARY.md  TRANSFORMATION_SUMMARY.md  analyse_schnittpunkte.py  anleitung_parametrische_funktionen.py  beispiel_marimo.py  coverage.xml  debug_ableitung.py  debug_ableitung_detailed.py  debug_api_wrapper.py  debug_bereichsproblem.py  debug_buffering_issue.py  debug_detailed.py  debug_domain.py  debug_error_handling.py  debug_exponential_faktorisierung.py  debug_exponential_structure.py  debug_exponential_terms.py  debug_faktorisierung_detailed.py  debug_faktorisierungsfehler.py  debug_funktion_wert.py  debug_funktionen.py  debug_ganzrationale.py  debug_graph.py  debug_len_args.py  debug_parametrisierte_funktion.py  debug_property.py  debug_schnittpunkte_detailed.py  (+104 more)
docs/: automatische-symbolerkennung.md
docs/methoden/: ableitungs-methoden.md  extremstellen-methoden.md  kurvendiskussion-methoden.md  nullstellen-methoden.md
docs/visualisierung/: marimo-visualisierung.md
examples/: README.md  api_demonstration.py  beispiel_marimo.py  marimo_schnelltest.py  phase2_beispiele.py  phase2_beispiele_fixed.py
examples/advanced/: advanced_analysis.py  kurvendiskussion.py  taylor_demo.py
examples/basic/: gerade_parabel_analyse.py  getting_started.py
examples/marimo_integration/: interactive_dashboard.py  marimo_examples.py
examples/visualization/: comprehensive_demo.py  comprehensive_plotting.py  perfekte_parabel_plotly.py
src/schul_analysis/: __init__.py  analysis.py  api.py  errors.py  exponential.py  funktion.py  funktion.py.backup  ganzrationale.py  gebrochen_rationale.py  gemischte.py  lineare.py  lineare_gleichungssysteme.py  parametrisch.py  quadratisch.py  schmiegkurven.py  schmiegung.py  struktur.py  strukturiert.py  symbolic.py  symmetrie.py  sympy_types.py  taylor.py  taylorpolynom.py  test_utils.py  trigonometrisch.py  visualisierung.py
src/schul_mathematik/: __init__.py
src/schul_mathematik/analysis/: __init__.py  api.py  aspect_ratio.py  basis_funktion.py  config.py  config_enhanced.py  debugger.py  errors.py  exponential.py  funktion.py  ganzrationale.py  gebrochen_rationale.py  gemischte.py  interaktiv_explorer.py  lineare.py  lineare_gleichungssysteme.py  monitoring.py  performance_caching.py  quadratisch.py  schmiegung.py  struktur.py  strukturiert.py  symmetrie.py  sympy_types.py  taylor.py  test_utils.py  trigonometrisch.py  visualisierung.py  visualisierung_errors.py
src/schul_mathematik/gemeinsam/: __init__.py
src/schul_mathematik/geometrie/: __init__.py  punkte_geraden.py  visualisierung.py
src/schul_mathematik/stochastik/: __init__.py  verteilungen.py  visualisierung.py  wrapper.py
tests/: .coverage  coverage.xml  test_ableitung_caching.py  test_analysis_funktionen.py  test_arithmetic.py  test_arithmetik.py  test_ausmultiplizieren.py  test_automatische_erkennung.py  test_call_syntax.py  test_enhanced_config.py  test_enhanced_type_hints.py  test_erweitert.py  test_exact_arithmetic.py  test_exception_handling.py  test_extremstellen_exakt.py  test_flaeche.py  test_functions_debugger.py  test_funktions_debugger.py  test_ganzrationale.py  test_gebrochen_rationale.py  test_gemischte_ausdruecke.py  test_gleichungen.py  test_intelligente_vereinfachung.py  test_komplett_symbolerkennung.py  test_komplexe_ausdruecke.py  test_konstruktoren.py  test_lgs.py  test_lgs_integration.py  test_lineare_gleichungssysteme.py  test_linearfaktoren.py  test_modern_api.py  test_nullstellen_problem.py  test_parametrisch.py  test_parametrisch_phase1.py  test_parametrisch_phase2.py  test_partielle_faktorisierung.py  test_performance_caching.py  test_performance_monitoring.py  test_prime_syntax.py  test_scaling_fix.py  (+14 more)
